--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kiko-components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -47,11 +47,14 @@
     "less": "^3.12.0",
     "less-loader": "^7.1.0",
     "lodash-es": "^4.17.21",
+    "postcss": "^8.3.6",
     "rimraf": "^2.7.1",
     "rollup": "^2.53.2",
     "rollup-plugin-less": "^1.1.3",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^1.14.1",
     "typescript": "~3.9.3",
     "vue": "^3.0.0",
